# pole

./: .gitignore  README.md  pyproject.toml  requirements-test.txt
.github/workflows/: release.yml  tests.yml
pole/: __init__.py  async_utils.py  clipboard.py  config.py  guess.py  tables.py  text_art.py  vault.py
tests/: test_async_utils.py  test_cli.py  test_guess.py  test_tables.py  test_vault.py
