[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pole"
dependencies = [
    "hvac",
    "pyperclip",
    "platformdirs",
    "tomli; python_version<'3.11'",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "pole.__version__"}

[project.scripts]
pole = "pole:main"
